--- a/src/styles/components/app.scss
+++ b/src/styles/components/app.scss
@@ -1,4 +1,11 @@
 .view {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.message {
+    margin-top: 100px;
+    text-align: center;
+    width: 600px;
 }
